# Twitch_Stream_To_YouTube

./: .gitignore  END USER LICENSE AGREEMENT  LICENSE  README.md  check_tv.py  config_tv.py  coordinator.py  explain.md  flow.py  get_token.py  gui.py  log.config.json  logger.py  logger_config.py  pyproject.toml  readthis.md  readthisguide.md  relive_tv.py  run.py  setup_gui.py  setup_gui_DONT_USE.py  tv.py
google_auth_oauthlib/: flow.py
logs/: mhm.txt
