[project]
name = "twitch-stream-to-youtube"
version = "0.6.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.169.0",
    "google-auth-oauthlib>=1.2.2",
    "requests>=2.32.3",
    "selenium>=4.32.0",
    "streamlink>=7.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]
